# OpenBLAS

./: .cirrus.yml  .cirun.yml  .drone.yml  .gitignore  .md  .pre-commit-config.yaml  .travis.yml  01Readme.txt  CMakeLists.txt  CONTRIBUTORS.md  Changelog.txt  Document.md  Faq.md  Fixed-optimized-kernels-To-do-List.md  GotoBLAS_02QuickInstall.txt  GotoBLAS_03FAQ.txt  GotoBLAS_05LargePage.txt  GotoBLAS_06WeirdPerformance.txt  Home.md  How-to-build-OpenBLAS-for-Android.md  How-to-build-OpenBLAS-for-macOS-M1---arm64.md  How-to-generate-import-library-for-MinGW.md  Installation-Guide.md  Jenkinsfile  Jenkinsfile.pwr  LICENSE  Mailing-List.md  Makefile  Makefile.L3  Makefile.alpha  Makefile.arm  Makefile.arm64  Makefile.generic  Makefile.getarch  Makefile.ia64  Makefile.install  Makefile.loongarch64  Makefile.orig  Makefile.power  Makefile.prebuild  (+111 more)
ctest/: CMakeLists.txt  Makefile  auxiliary.c  c_c2chke.c  c_c3chke.c  c_c3chke_3m.c  c_cblas1.c  c_cblas2.c  c_cblas3.c  c_cblas3_3m.c  c_cblat1.f  c_cblat1c.c  c_cblat2.f  c_cblat2c.c  c_cblat3.f  c_cblat3_3m.f  c_cblat3c.c  c_cblat3c_3m.c  c_d2chke.c  c_d3chke.c  c_dblas1.c  c_dblas2.c  c_dblas3.c  c_dblat1.f  c_dblat1c.c  c_dblat2.f  c_dblat2c.c  c_dblat3.f  c_dblat3c.c  c_s2chke.c  c_s3chke.c  c_sblas1.c  c_sblas2.c  c_sblas3.c  c_sblat1.f  c_sblat1c.c  c_sblat2.f  c_sblat2c.c  c_sblat3.f  c_sblat3c.c  (+21 more)
driver/level2/: CMakeLists.txt  Makefile  gbmv_k.c  gbmv_thread.c  gemv_thread.c  ger_thread.c  meson.build  sbgemv_thread.c  sbmv_k.c  sbmv_thread.c  spmv_k.c  spmv_thread.c  spr2_k.c  spr2_thread.c  spr_k.c  spr_thread.c  symv_thread.c  syr2_k.c  syr2_thread.c  syr_k.c  syr_thread.c  tbmv_L.c  tbmv_U.c  tbmv_thread.c  tbsv_L.c  tbsv_U.c  tpmv_L.c  tpmv_U.c  tpmv_thread.c  tpsv_L.c  tpsv_U.c  trmv_L.c  trmv_U.c  trmv_thread.c  trsv_L.c  trsv_U.c  zgbmv_k.c  zhbmv_k.c  zher2_k.c  zher_k.c  (+21 more)
driver/level3/: .level3.c.swp  CMakeLists.txt  Makefile  gemm.c  gemm3m.c  gemm3m_level3.c  gemm_batch_thread.c  gemm_thread_m.c  gemm_thread_mn.c  gemm_thread_n.c  gemm_thread_variable.c  hemm3m_k.c  level3.c  level3_gemm3m_thread.c  level3_syr2k.c  level3_syrk.c  level3_syrk_threaded.c  level3_thread.c  meson.build  symm3m_k.c  symm_k.c  syr2k_k.c  syr2k_kernel.c  syrk_k.c  syrk_kernel.c  syrk_thread.c  trmm_L.c  trmm_R.c  trsm_L.c  trsm_R.c  zhemm_k.c  zher2k_k.c  zher2k_kernel.c  zherk_beta.c  zherk_k.c  zherk_kernel.c  zsyrk_beta.c
driver/others/: CMakeLists.txt  Makefile  blas_l1_thread.c  blas_server.c  blas_server_callback.c  blas_server_omp.c  blas_server_win32.c  divtable.c  dynamic.c  dynamic_arm64.c  dynamic_loongarch64.c  dynamic_mips64.c  dynamic_power.c  dynamic_zarch.c  init.c  lamc3.c  lamch.c  memory.c  memory_qalloc.c  meson.build  openblas_env.c  openblas_error_handle.c  openblas_get_config.c  openblas_get_parallel.c  openblas_set_num_threads.c  parameter.c  profile.c  xerbla.c
interface/: CMakeLists.txt  Makefile  asum.c  axpby.c  axpy.c  copy.c  create  dot.c  dsdot.c  gbmv.c  geadd.c  gemm.c  gemm_batch.c  gemmt.c  gemv.c  ger.c  gesv.c  getrf.c  imatcopy.c  imax.c  lauum.c  max.c  meson.build  meson_options.txt  nrm2.c  omatcopy.c  potri.c  rot.c  rotg.c  rotm.c  rotmg.c  sbgemv.c  sbmv.c  scal.c  sdsdot.c  spmv.c  spr.c  spr2.c  swap.c  symm.c  (+52 more)
interface/lapack/: gesv.c  getf2.c  getrf.c  getrs.c  larf.c.obsolete  laswp.c  lauu2.c  lauu2.c.bad  lauum.c  potf2.c  potrf.c  potri.c  trti2.c  trtri.c  trtrs.c  zgetf2.c  zgetrf.c  zgetrs.c  zlaswp.c  zlauu2.c  zlauu2.c.bad  zlauum.c  zpotf2.c  zpotrf.c  zpotri.c  zpotri.c.bad  ztrti2.c  ztrtri.c  ztrtrs.c
kernel/: CMakeLists.txt  Makefile  Makefile.L1  Makefile.L2  Makefile.L3  Makefile.LA  common_param.h  meson.build  setparam-ref.c
kernel/alpha/: KERNEL  amax.S  asum.S  axpy.S  cabs.S  cnrm2.S  copy.S  cscal.S  dnrm2.S  dot.S  gemm_beta.S  gemm_kernel_4x4.S  gemv_n.S  gemv_t.S  iamax.S  imax.S  izamax.S  lsame.S  max.S  rot.S  scal.S  snrm2.S  sum.S  swap.S  trsm_kernel_4x4_LN.S  trsm_kernel_4x4_LT.S  trsm_kernel_4x4_RT.S  zamax.S  zasum.S  zaxpy.S  zdot.S  zgemm_beta.S  zgemm_kernel_2x2.S  zgemv_n.S  zgemv_t.S  znrm2.S  zrot.S  zscal.S  zsum.S  zswap.S  (+3 more)
kernel/arm/: KERNEL.ARMV6  KERNEL.ARMV7  amax.c  amax_vfp.S  amin.c  asum.c  asum_vfp.S  axpby.c  axpy.c  axpy_vfp.S  ccopy_vfp.S  cdot_vfp.S  cdot_vfpv3.S  cgemm_kernel_2x2_vfp.S  cgemm_kernel_2x2_vfpv3.S  cgemm_ncopy_2_vfp.S  cgemv_n_vfp.S  cgemv_t_vfp.S  copy.c  ctrmm_kernel_2x2_vfp.S  ctrmm_kernel_2x2_vfpv3.S  dcopy_vfpv3.S  ddot_vfp.S  ddot_vfpv3.S  dgemm_kernel_4x2_vfp.S  dgemm_kernel_4x4_vfpv3.S  dgemm_kernel_8x2_vfpv3.S  dgemm_ncopy_2_vfp.S  dgemm_ncopy_4_vfp.S  dgemm_ncopy_4_vfpv3.S  dgemm_tcopy_4_vfp.S  dot.c  dtrmm_kernel_4x2_vfp.S  dtrmm_kernel_4x4_vfpv3.S  dtrmm_kernel_8x2_vfpv3.S  gemv_n.c  gemv_n_vfp.S  gemv_n_vfpv3.S  gemv_t.c  gemv_t_vfp.S  (+66 more)
kernel/arm64/: KERNEL  KERNEL.A64FX  KERNEL.ARMV8  KERNEL.ARMV8SVE  KERNEL.CORTEXA53  KERNEL.CORTEXA55  KERNEL.CORTEXA57  KERNEL.NEOVERSEN1  KERNEL.NEOVERSEN2  KERNEL.NEOVERSEV1  KERNEL.THUNDERX  KERNEL.THUNDERX2T99  KERNEL.THUNDERX3T110  KERNEL.TSV110  KERNEL.VULCAN  KERNEL.generic  casum_thunderx2t99.c  cgemm_kernel_4x4.S  cgemm_kernel_8x4.S  cgemm_kernel_8x4_thunderx2t99.S  cgemm_kernel_sve_v1x4.S  cgemm_ncopy_sve_v1.c  cgemm_tcopy_sve_v1.c  chemm_ltcopy_sve.c  copy.S  (+140 more)
lapack/: CMakeLists.txt  Makefile
lapack-netlib/: .gitignore  CMakeLists.txt  CTestCustom.cmake.in  LICENSE  Makefile  README  README.md  cgejsv.f  dgejsv.f  lapack.pc.in  lapack_build.cmake  lapack_testing.py  make.inc.example  meson.build  zgejsv.f
test/: CMakeLists.txt  Makefile  cblat1.f  cblat3_3m.f  compare_sgemm_sbgemm.c  compare_sgemm_shgemm.c  dblat1.f  get_threading_model.c  meson.build  sblat1.f  test_helper.cmake  test_runner.c  zblat1.f  zblat3_3m.f
utest/: CMakeLists.txt  Makefile  common_utest.h  ctest.h  main.c  meson.build  test_amax.c  test_axpy.c  test_dnrm2.c  test_dotu.c  test_dsdot.c  test_fork.c  test_gemv.c  test_ismin.c  test_kernel_regress.c  test_min.c  test_nrm2.c  test_post_fork.c  test_potrs.c  test_rot.c  test_rotmg.c  test_swap.c  test_zscal.c  utest_main2.c
(+10608 files in other folders)
